# fashion-app

./: .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  Dockerfile  Dockerfile.ollama  Makefile  README.md  db.sqlite  docker-compose-cuda.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ai_evaluation.yaml  deploy-pages.yaml  test-deploy.yaml
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
api/: .env.example  Dockerfile  auth.py  database.py  main.py  pyproject.toml  routes.py  schemas.py
backend/: pyproject.toml
backend/src/genai_template_backend/: app.py  env_settings.py  utils.py
backend/src/genai_template_backend/api/: llm.py
backend/src/genai_template_backend/api/routes/: chat.py
frontend/: .env.example  Dockerfile  package-lock.json  package.json  pyproject.toml  reset-app.html  webpack.widget.config.js  widget-demo.html
frontend/public/: index.html  virtual-tryon-widget.min.js
frontend/src/: App.css  App.tsx  AuthContext.tsx  AuthenticatedImage.tsx  DashboardLayout.tsx  HeaderBar.tsx  ImportWizardModal.tsx  Landing.tsx  Login.tsx  Products.tsx  ProtectedRoute.tsx  Register.tsx  Sidebar.tsx  WidgetCustomization.tsx  index.tsx
frontend/src/components/: DemoGuideChatbot.tsx  UsageBarChart.tsx
frontend/src/config/: README.md  apiConfig.ts  importConfig.ts
frontend/src/genai_template_frontend/: main.py  utils.py
frontend/src/genai_template_frontend/components/: chat.py
frontend/src/pages/: AnalyticsPage.tsx  DashboardPage.tsx  DemoStorePage.tsx  IntegrationPage.tsx  PaymentCancelPage.tsx  PaymentFailedPage.tsx  PaymentSuccessPage.tsx  ProductsPage.tsx  SubscriptionPage.tsx  WidgetPage.tsx
frontend/src/types/: widget.d.ts
frontend/src/widget/: README.md  VirtualTryOnWidget.tsx  VirtualTryOnWidgetPreview.tsx  apiUtils.ts  defaultWidgetConfig.ts  loader.js  loader.ts  trackEvents.ts  visitorIds.ts
scripts/: add_credits_column.py  usage_logs.py
search/: search_index.json
src/: settings.py  utils.py
src/ml/: ai.py
tests/: test_cuda.py  test_llm.py  test_llm_endpoint.py  test_ollama_endpoint.py  test_settings.py
tests/api/: test_chat.py
