[project]
name = "generative-ai-project-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [

]

############### uv configuration
[tool.uv.workspace]
members = ["frontend", "backend",]

# uses also the depenencies in the [project.dependencies] section
[tool.uv]
managed = true
default-groups = ["dev", "docs"]

[dependency-groups]
# if you add new dependencies here, make sure to add them to [tool.uv] default-groups up above
dev = [
    "pytest == 8.3.0",
    "pytest-asyncio == 0.24.0",
    "pre-commit == 4.2.0",
    "jupyter==1.1.1",
    "ruff==0.8.1"
]
docs = [
    "mkdocs == 1.6.1",
    "mkdocs-material>=9.5.41",
    "mkdocstrings>=0.26.2",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings-python",
    "mkdocs-same-dir",
    "mkdocs-exclude"
]


# pytest configuration
[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"


# ruff configuration
[tool.ruff]
extend-exclude = ["*.ipynb"]
line-length = 100

# Enable all `pydocstyle` rules, limiting to those that adhere to the Google convention via `convention = "google"`
[tool.ruff.lint]
select = ["D", "F401"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D107", "D417"]

[tool.ruff.lint.pydocstyle]
# Use Google-style docstrings.
convention = "google"
